clusters/homelab/services/image-builder/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: image-builder
  annotations:
    kustomize.toolkit.fluxcd.io/prune: disabled
    kustomize.toolkit.fluxcd.io/ssa: merge
